--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Reupen SHah",
   "dependencies": {
-    "@fortawesome/fontawesome-pro": "^5.14.0",
+    "@reupen/fontawesome-pro": "^5.15.3",
     "bulma": "^0.9.0",
     "gatsby": "^2.24.52",
     "gatsby-image": "^2.4.16",
