--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
   "author": "Reupen SHah",
   "dependencies": {
     "@reupen/fontawesome-pro": "^5.15.3",
-    "bulma": "^0.9.0",
-    "gatsby": "^2.24.52",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-google-gtag": "^2.1.10",
-    "gatsby-plugin-manifest": "^2.4.26",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.10",
+    "bulma": "^0.9.2",
+    "gatsby": "^3.7.1",
+    "gatsby-plugin-google-gtag": "^3.7.1",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-purgecss": "^6.0.2",
+    "gatsby-plugin-react-helmet": "^4.7.1",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
-    "gatsby-plugin-remove-trailing-slashes": "^2.3.11",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.30",
-    "gatsby-source-filesystem": "^2.3.27",
-    "gatsby-transformer-sharp": "^2.5.13",
-    "node-sass": "^4.14.1",
+    "gatsby-plugin-remove-trailing-slashes": "^3.7.1",
+    "gatsby-plugin-sass": "^4.7.1",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
+    "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.1.1"
+    "prettier": "^2.3.1"
   },
   "keywords": [
     "gatsby"
