--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@fortawesome:registry=https://npm.fontawesome.com/
+@reupen:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=${GITHUB_NPM_TOKEN}
