--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "*.{astro,cjs,cts,js,json,jsx,mjs,mts,ts,tsx}": "prettier --write"
+  "*.{astro,cjs,cts,js,json,jsx,md,mjs,mts,ts,tsx}": "prettier --write"
 }
