--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.16.0",
-    "@reupen/fontawesome-pro": "^5.15.4",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "astro": "^2.1.2",
     "astro-compress": "^1.1.35",
     "bulma": "^0.9.4",
