Update pre-commit hooks

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,14 @@
   "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "all",
+  "plugins": ["prettier-plugin-astro"],
   "overrides": [
+    {
+      "files": "*.astro",
+      "options": {
+        "parser": "astro"
+      }
+    },
     {
       "files": "*.md",
       "options": {
