--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,15 @@ repos:
       - id: end-of-file-fixer
       - id: check-json
       - id: check-yaml
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0
+  - repo: local
     hooks:
       - id: prettier
+        name: prettier
+        entry: npm exec --no -- prettier --write --ignore-unknown
+        language: system
+        types: [text]
+      - id: astro-check
+        name: astro check
+        entry: npm exec --no -- astro check
+        language: system
+        pass_filenames: false
