--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "sass": "^1.77.8"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.3",
     "@types/node": "^20.16.1",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "typescript": "^5.5.4"
   }
 }
