--- a/package.json
+++ b/package.json
@@ -11,27 +11,35 @@
     "url": "https://github.com/reupen/yuo.be"
   },
   "scripts": {
+    "check": "astro check --minimumFailingSeverity hint",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build && npm run purgecss",
+    "lint": "eslint --max-warnings 0 .",
     "preview": "astro preview",
     "astro": "astro",
     "purgecss": "purgecss --content dist/**/*.html --css dist/**/*.css -o ."
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@playform/compress": "^0.1.6",
     "astro": "^5.1.0",
     "bulma": "^0.9.4",
     "purgecss": "^7.0.2",
-    "sass": "^1.82.0"
+    "sass": "^1.83.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "@eslint/js": "^9.16.0",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@types/node": "^22.10.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "sharp": "^0.33.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1"
   }
 }
