--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,3 +32,7 @@ updates:
         patterns:
           - "typescript"
           - "typescript-eslint"
+    ignore:
+      - dependency-name: "@types/node"
+        update-types:
+          - "version-update:semver-major"
